ingrees2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-ingress
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "socket-service"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx 
  rules:
    - host: "*"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: socket-service
                port:
                  number: 80
