ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-io-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: service-group
    alb.ingress.kubernetes.io/subnets: subnet-0fb394cec0c4d83b7,subnet-0aca8babd44939634, subnet-0245f99d50579e867
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTP": 5000}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: socket-io-app-svc
              port:
                number: 5000
